test/files/neg/t0204.check
t0204.scala:4: error: class type required
 trait C extends B
                 ^
one error found
